# devscripts

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  NOTICE  README.md
completions/: devscripts.bash
src/: config.rs  lib.rs  path.rs  scripts.rs
src/config/: reader.rs
