[package]
name = "dev-tools"
version = "0.1.0"
edition = "2021"
authors = ["einfachIrgendwer0815"]
license = "MIT OR Apache-2.0"
description = "Optimize your development workflow by automating repetitive tasks"
exclude = ["*", "!src/**", "!LICENSE*", "!NOTICE", "!README"]

# prevent unintended publish before version 0.1.0 is actually released
publish = false

[[bin]]
name = "dev"
required-features = ["application"]

[features]
default = ["application"]
# Should be disabled when depending on devtools as a library
# (no-default-features = true).
application = ["clap", "anyhow"]
# Used for builds on docs.rs to enable #![features(doc_auto_cfg)] (internal)
docsrs = []

[dependencies]
anyhow = { version = "1.0.86", optional = true }
clap = { version = "4.5.16", features = ["cargo"], optional = true }

[package.metadata.docs.rs]
no-default-features = true # to exclude `application`
features = ["docsrs"]
