[package]
name = "devscripts"
version = "0.1.0-alpha.2"
edition = "2021"
authors = ["einfachIrgendwer0815"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/einfachIrgendwer0815/devscripts"
description = "Run path-specific (shell) scripts without the need to modify `PATH`."
exclude = ["*", "!src/**", "!completions/**", "!LICENSE*", "!NOTICE", "!README"]
rust-version = "1.81.0"

# prevent unintended publish before version 0.1.0 is actually released
publish = false

[[bin]]
name = "dev"
required-features = ["application"]

[features]
default = ["application"]
# Should be disabled when depending on devscripts as a library
# (no-default-features = true).
application = ["clap", "anyhow", "serde", "git-version"]
# Used for builds on docs.rs to enable #![features(doc_auto_cfg)] (internal)
docsrs = []
# Enable implementations of serde traits on certain types.
serde = ["dep:serde", "dep:figment"]

[dependencies]
anyhow = { version = "1.0.89", optional = true }
clap = { version = "4.5.17", features = ["cargo"], optional = true }
git-version = { version = "0.3.9", optional = true }
home = { version = "0.5.9" }
serde = { version = "1.0.210", optional = true, features = ["derive"] }
thiserror = "1.0.63"

[dependencies.figment]
version = "0.10.19"
features = ["env", "toml"]
optional = true

[dependencies.git2]
version = "0.19.0"
default-features = false
features = ["vendored-libgit2"]

[package.metadata.docs.rs]
no-default-features = true     # to exclude `application`
features = ["docsrs", "serde"]

[profile.release]
lto = true
strip = true
codegen-units = 1
